Edited nav bar; simplified nav bar and fixed it so now it appears even on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ and open the template in the editor.
 	position:relative;
 	font-size:14px;
 	font-weight:900;
+        min-width: 360px;
 }
 .nav-list {
 	
@@ -22,19 +23,25 @@ and open the template in the editor.
 	float:left;
 	*display:inline;
 	zoom:1;
+        text-align: center;
+        min-width: 360px;
 }
 .nav-link a {
 	display:block;
 	padding:15px 20px;
 	color:#FFF;
 	background:pink;
+        text-decoration: none;
+        font-size: 1em;
+        font-family: Helvetica;
+        font-weight: bold;
 }
-.nav-link:first-child a {
+/*.nav-link:first-child a {
 	border-radius:5px 0 0 5px;
 }
 .nav-link:last-child a {
 	border-radius:0 5px 5px 0;
-}
+}*/
 .nav-link a:hover {
 	background:#db1422;
 }
@@ -56,7 +63,7 @@ and open the template in the editor.
 /*------------------------------------*\
     Media Queries
 \*------------------------------------*/
-
+/*
 @media only screen and (min-width: 320px) and (max-width: 768px) {
 	.nav-mobile {
 		display:block;
@@ -93,7 +100,7 @@ and open the template in the editor.
 }
 
 // end of what was added to style nav bar
-
+*/
 *{
     margin: 0;
     padding: 0;
